# backend/src/orders/dto/create-order.dto.ts
@@ -1,12 +1,11 @@
 import { ApiProperty } from '@nestjs/swagger';
-import { IsNotEmpty, IsString } from 'class-validator';
+import { IsInt, IsNotEmpty } from 'class-validator';
 
 export class CreateOrderDto {
   @ApiProperty({
-    example: 'Nya Nya Apartment, Neko Land, Tokyo, Japan',
-    description: 'The address where the products are shipped to',
+    description: 'The Id of address where the products are shipped to',
   })
-  @IsString()
   @IsNotEmpty()
-  shippingAddress: string;
+  @IsInt()
+  shippingAddressId: number;
 }
